# oyusec

./: .eslintrc.js  .gitattributes  .gitignore  .prettierrc  CHANGELOG.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.sh  nuxt.config.js  package.json  push.sh  vue.config.js  vuetify.options.js
.github/: FUNDING.yml
assets/: class.sass  global.sass  theme.sass  variables.scss
butterfly/: .gitignore  config.yml  dev-push.sh  docker-compose.yml  go.mod  go.sum  main.go  privateKey.pem  publicKey.pem
cat/: .gitignore  README.md  db.sqlite3  heroku.sh  latest.dump  pyproject.toml  requirements.txt  script.py
cat/apps/academy/: admin.py  apps.py  consts.py  models.py  views.py
cat/apps/academy/management/commands/: academy.py
cat/apps/academy/migrations/: 0001_initial.py  0002_auto_20210426_1643.py
cat/apps/api/: urls.py
cat/apps/competition/: models.py  signals.py  utils.py  views.py
cat/apps/competition/migrations/: 0001_initial.py  0003_competitionauthor.py
cat/apps/core/: consts.py  models.py  signals.py  urls.py  views.py
cat/apps/core/management/commands/: init.py
cat/apps/core/migrations/: 0001_initial.py
cat/apps/core/static/: main.css
cat/apps/core/templates/: Index.html
cat/apps/ctf/: admin.py  apps.py  consts.py  models.py
cat/apps/ctf/migrations/: 0001_initial.py
cat/config/: settings-old.py  settings.py
components/: BarChart.vue  Challenge.vue  ComingCompetition.vue  Counter.vue  RadarChart.vue  TodayTopPlayer.vue  Writeup.vue  WriteupAdd.vue
django-server/: Makefile  heroku.sh  (+3 more)
(+711 files in other folders)
